[package]
name = "rust_waytoodeep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.16"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.3.18"
